added max stat thing to the patho ui

--- a/browserassets/html/pathoComp.html
+++ b/browserassets/html/pathoComp.html
@@ -121,8 +121,12 @@
 									<td><div class="text-field tf-narrow"  id="txtSupCode"></div></td>
 								</tr>
 								<tr id="helpCapacity" class="helpTextItem">
-									<td><span class="label lb-medl bigfont">Capacity</span></td>
+									<td><span class="label lb-medl bigfont">Active Capacity</span></td>
 									<td><div class="text-field tf-narrow"  id="txtCap"></div></td>
+								</tr>
+								<tr id="helpMaxStats" class="helpTextItem">
+									<td><span class="label lb-medl bigfont">Passive Capacity</span></td>
+									<td><div class="text-field tf-narrow"  id="txtMaxStats"></div></td>
 								</tr>
 							</table>
 						</div>
