--- a/browserassets/html/ghostdrone.html
+++ b/browserassets/html/ghostdrone.html
@@ -8,7 +8,7 @@
 	<img src="{{resource("images/Ghostdrone.png")}}" class="center" />
 
 	<p>
-		Ghostdrones are small robots that have a few tools to help maintain and repair the station. They can patch hull breaches, repair wiring, and even build entirely new constructions. You can communicate with other Ghostdrones by simply talking, either by pressing <strong>T</strong> (default) or using the <code>say</code> command. You can also hear and communicate with other ghosts by adding a semicolon (";") before your message, such as <em><code>";any other ghosts want to help out?"</code></em>. <strong>Living humans and cyborgs cannot hear you.</strong>
+		Ghostdrones are little robots that have a few tools to help maintain and repair the station. They can patch hull breaches, repair wiring, and even build entirely new constructions. You can communicate with other Ghostdrones by simply talking, either by pressing <strong>T</strong> (default) or using the <code>say</code> command. You can also hear and communicate with other ghosts by adding a semicolon (";") before your message, such as <em><code>";any other ghosts want to help out?"</code></em>. <strong>Living humans and cyborgs cannot hear you.</strong>
 	</p>
 	<p>
 		<strong>Ghostdrones are not a chance to come back and grief the station!</strong> Follow your laws! Welding airlocks, removing floors, and building obstructive walls are all forms of grief, and if you do this, <strong>you will be banned</strong>!
