--- a/browserassets/tgui/tgui.html
+++ b/browserassets/tgui/tgui.html
@@ -30,13 +30,12 @@ if (window.__windowId__ === '[' + 'tgui:windowId' + ']') {
       }
     }
     return target;
-	};
+  };
 
-	// BYOND API object
+  // BYOND API object
   // ------------------------------------------------------
 
   var Byond = window.Byond = {};
-
   // Trident engine version
   var tridentVersion = (function () {
     var groups = navigator.userAgent.match(/Trident\/(\d+).+?;/i);
@@ -74,7 +73,7 @@ if (window.__windowId__ === '[' + 'tgui:windowId' + ']') {
     };
   }
 
-  // Makes a BYOND call
+  // Makes a BYOND call.
   // See: https://secure.byond.com/docs/ref/skinparams.html
   Byond.call = function (path, params) {
     // Not running in BYOND, abort.
@@ -151,8 +150,11 @@ if (window.__windowId__ === '[' + 'tgui:windowId' + ']') {
   };
 
   Byond.winset = function (id, propName, propValue) {
+    if (typeof id === 'object' && id !== null) {
+      return Byond.call('winset', id);
+    }
     var props = {};
-    if (propName === 'string') {
+    if (typeof propName === 'string') {
       props[propName] = propValue;
     }
     else {
@@ -172,134 +174,134 @@ if (window.__windowId__ === '[' + 'tgui:windowId' + ']') {
   };
 
 
-	// Asset loaders
-	// ------------------------------------------------------
+  // Asset loaders
+  // ------------------------------------------------------
 
-	var RETRY_ATTEMPTS = 5;
-	var RETRY_WAIT_INITIAL = 500;
-	var RETRY_WAIT_INCREMENT = 500;
+  var RETRY_ATTEMPTS = 5;
+  var RETRY_INTERVAL = 2000;
 
-	var loadedAssetByUrl = {};
+  var loadedCssByUrl = {};
+  var loadedJsByUrl = {};
 
-	var isStyleSheetLoaded = function (node, url) {
-		// Method #1 (works on IE10+)
-		var styleSheet = node.sheet;
-		if (styleSheet) {
-			return styleSheet.rules.length > 0;
-		}
-		// Method #2
-		var styleSheets = document.styleSheets;
-		var len = styleSheets.length;
-		for (var i = 0; i < len; i++) {
-			var styleSheet = styleSheets[i];
-			if (styleSheet.href.indexOf(url) !== -1) {
-				return styleSheet.rules.length > 0;
-			}
-		}
-		// All methods failed
-		return false;
-	};
+  var isStyleSheetLoaded = function (node, url) {
+    // Method #1 (works on IE10+)
+    var styleSheet = node.sheet;
+    if (styleSheet) {
+      return styleSheet.rules.length > 0;
+    }
+    // Method #2
+    var styleSheets = document.styleSheets;
+    var len = styleSheets.length;
+    for (var i = 0; i < len; i++) {
+      var styleSheet = styleSheets[i];
+      if (styleSheet.href.indexOf(url) !== -1) {
+        return styleSheet.rules.length > 0;
+      }
+    }
+    // All methods failed
+    return false;
+  };
 
-	var injectNode = function (node) {
-		if (!document.body) {
-			setTimeout(function () {
-				injectNode(node);
-			});
-			return;
-		}
-		var refs = document.body.childNodes;
-		var ref = refs[refs.length - 1];
-		ref.parentNode.insertBefore(node, ref.nextSibling);
-	};
+  var onDocumentBodyReady = function (done) {
+    if (document.body) {
+      return done();
+    }
+    setTimeout(function () {
+      onDocumentBodyReady(done);
+    });
+  };
 
-	var loadAsset = function (options) {
-		var url = options.url;
-		var type = options.type;
-		var sync = options.sync;
-		var attempt = options.attempt || 0;
-		if (loadedAssetByUrl[url]) {
-			return;
-		}
-		loadedAssetByUrl[url] = options;
-		// Generic retry function
-		var retry = function () {
-			if (attempt >= RETRY_ATTEMPTS) {
-				var errorMessage = "Error: Failed to load the asset "
-					+ "'" + url + "' after several attempts.";
-				if (type === 'css') {
-					errorMessage += + "\nStylesheet was either not found, "
-						+ "or you're trying to load an empty stylesheet "
-						+ "that has no CSS rules in it.";
-				}
-				throw new Error(errorMessage);
-			}
-			setTimeout(function () {
-				loadedAssetByUrl[url] = null;
-				options.attempt += 1;
-				loadAsset(options);
-			}, RETRY_WAIT_INITIAL + attempt * RETRY_WAIT_INCREMENT);
-		};
-		// JS specific code
-		if (type === 'js') {
-			var node = document.createElement('script');
-			node.type = 'text/javascript';
-			// IE8: Prefer non-https protocols
-			node.src = Byond.IS_LTE_IE9
-				? url.replace('https://', 'http://')
-				: url;
-			if (sync) {
-				node.defer = true;
-			}
-			else {
-				node.async = true;
-			}
-			node.onerror = function () {
-				node.onerror = null;
-				node.parentNode.removeChild(node);
-				node = null;
-				retry();
-			};
-			injectNode(node);
-			return;
-		}
-		// CSS specific code
-		if (type === 'css') {
-			var node = document.createElement('link');
-			node.type = 'text/css';
-			node.rel = 'stylesheet';
-			// IE8: Prefer non-https protocols
-			node.href = Byond.IS_LTE_IE9
-				? url.replace('https://', 'http://')
-				: url;
-			// Temporarily set media to something inapplicable
-			// to ensure it'll fetch without blocking render
-			if (!sync) {
-				node.media = 'only x';
-			}
-			node.onload = function () {
-				node.onload = null;
-				if (isStyleSheetLoaded(node, url)) {
-					// Render the stylesheet
-					node.media = 'all';
-					return;
-				}
-				// Try again
-				node.parentNode.removeChild(node);
-				node = null;
-				retry();
-			};
-			injectNode(node);
-			return;
-		}
-	};
+  var getRefNode = function () {
+    var refs = (document.body || document.getElementsByTagName('head')[0])
+      .childNodes;
+    return refs[refs.length - 1];
+  };
 
-	Byond.loadJs = function (url, sync) {
-		loadAsset({ url: url, sync: sync, type: 'js' });
-	};
+  // Based on fg-loadcss package
+  // See: https://github.com/filamentgroup/loadCSS
+  Byond.loadCss = function (url, sync, attempt) {
+    if (loadedCssByUrl[url]) {
+      return;
+    }
+    if (!attempt) {
+      attempt = 1;
+    }
+    loadedCssByUrl[url] = true;
+    // Inject the stylesheet
+    var ref = getRefNode();
+    /** @type {HTMLLinkElement} */
+    var node = document.createElement('link');
+    node.type = 'text/css';
+    node.rel = 'stylesheet';
+    node.href = url;
+    // Temporarily set media to something inapplicable
+    // to ensure it'll fetch without blocking render
+    if (!sync) {
+      node.media = 'only x';
+    }
+    onDocumentBodyReady(function () {
+      ref.parentNode.insertBefore(node, ref.nextSibling);
+    });
+    // Listen for the load event
+    node.onload = function () {
+      node.onload = null;
+      if (isStyleSheetLoaded(node, url)) {
+        // Render the stylesheet
+        node.media = 'all';
+        return;
+      }
+      // Try again
+      node.parentNode.removeChild(node);
+      node = null;
+      loadedCssByUrl[url] = null;
+      if (attempt >= RETRY_ATTEMPTS) {
+        throw new Error("Error: Failed to load the stylesheet "
+          + "'" + url + "' after " + RETRY_ATTEMPTS + " attempts.\n"
+          + "It was either not found, or you're trying to load "
+          + "an empty stylesheet that has no CSS rules in it.");
+      }
+      setTimeout(function () {
+        Byond.loadCss(url, sync, attempt + 1);
+      }, RETRY_INTERVAL);
+    };
+  };
 
-	Byond.loadCss = function (url, sync) {
-		loadAsset({ url: url, sync: sync, type: 'css' });
-	};
+  Byond.loadJs = function (url, sync, attempt) {
+    if (loadedJsByUrl[url]) {
+      return;
+    }
+    if (!attempt) {
+      attempt = 1;
+    }
+    loadedJsByUrl[url] = true;
+    // Inject the stylesheet
+    var ref = getRefNode();
+    var node = document.createElement('script');
+    node.type = 'text/javascript';
+    if (sync) {
+      node.defer = true;
+    }
+    else {
+      node.async = true;
+    }
+    node.src = url;
+    onDocumentBodyReady(function () {
+      ref.parentNode.insertBefore(node, ref.nextSibling);
+    });
+    node.onerror = function () {
+      node.onerror = null;
+      node.parentNode.removeChild(node);
+      node = null;
+      loadedJsByUrl[url] = null;
+      if (attempt >= RETRY_ATTEMPTS) {
+        throw new Error("Error: Failed to load the script "
+          + "'" + url + "' after " + RETRY_ATTEMPTS + " attempts.");
+      }
+      setTimeout(function () {
+        Byond.loadJs(url, sync, attempt + 1);
+      }, RETRY_INTERVAL);
+    };
+  };
 })();
 
 // Global error handling
@@ -320,14 +322,12 @@ window.onerror = function (msg, url, line, col, error) {
   var errorStack = document.getElementById('FatalError__stack');
   if (errorRoot) {
     errorRoot.className = 'FatalError FatalError--visible';
-    if (window.onerror.__stack__) {
-      window.onerror.__stack__ += '\n\n' + stack;
+    if (errorStack.textContent) {
+      errorStack.textContent += '\n\n' + stack;
     }
     else {
-      window.onerror.__stack__ = stack;
-		}
-    var textProp = Byond.IS_LTE_IE8 ? 'innerText' : 'textContent';
-    errorStack[textProp] = window.onerror.__stack__;
+      errorStack.textContent = stack;
+    }
   }
   // Set window geometry
   var setFatalErrorGeometry = function () {
@@ -373,29 +373,49 @@ Byond.topic({
   window_id: window.__windowId__,
   type: 'ready',
 });
+
+// Necessary polyfill to make Webpack code splitting work on IE8
+if (!Function.prototype.bind) (function () {
+  var slice = Array.prototype.slice;
+  Function.prototype.bind = function () {
+    var thatFunc = this, thatArg = arguments[0];
+    var args = slice.call(arguments, 1);
+    if (typeof thatFunc !== 'function') {
+      // closest thing possible to the ECMAScript 5
+      // internal IsCallable function
+      throw new TypeError('Function.prototype.bind - ' +
+        'what is trying to be bound is not callable');
+    }
+    return function () {
+      var funcArgs = args.concat(slice.call(arguments))
+      return thatFunc.apply(thatArg, funcArgs);
+    };
+  };
+})();
 </script>
 
 <style>
-	.FatalError {
-		display: none;
-		position: absolute;
-		top: 0;
-		left: 0;
-		right: 0;
-		bottom: 0;
-		padding: 12px;
-		font-size: 12px;
-		font-family: Consolas, monospace;
-		color: #ffffff;
-		background-color: #0000dd;
-		z-index: 1000;
-		overflow: hidden;
-		text-align: center;
-	}
+.FatalError {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  padding: 12px;
+  font-size: 12px;
+  font-family: Consolas, monospace;
+  color: #ffffff;
+  background-color: #0000dd;
+  z-index: 1000;
+  overflow: hidden;
+  text-align: center;
+}
 
-	.FatalError--visible {
-		display: block !important;
-	}
+.FatalError--visible {
+  display: block !important;
+}
+
 .FatalError__logo {
   display: inline-block;
   text-align: left;
@@ -459,7 +479,6 @@ Byond.topic({
   100% { top: -15px; }
 }
 </style>
-
 </head>
 <body>
 
